// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Label /> expect to render the component correctly with "private" 1`] = `
<span
  styleName="Label Label--Private"
>
  Prive
</span>
`;

exports[`<Label /> expect to render the component correctly with "public" 1`] = `
<span
  styleName="Label Label--Public"
>
  Public
</span>
`;
